Code/Network Policies/16/NetworkPolicy_5.yaml
# [Default deny all ingress and all egress traffic]
# create a "default" policy for a namespace which prevents all ingress AND egress traffic.

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
